--- a/components/the-header/TheHeader.module.scss
+++ b/components/the-header/TheHeader.module.scss
@@ -1,10 +1,6 @@
 @import 'colors';
 
 .siteHeader {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
   background: $background-primary;
   padding: .7em 2em;
 
@@ -23,5 +19,12 @@
       font-size: 1.4em;
       font-weight: 700;
     }
+  }
+
+  &.fixed {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
   }
 }
