improve home page implementation

--- a/components/scrollable-container/ScrollableContainer.module.scss
+++ b/components/scrollable-container/ScrollableContainer.module.scss
@@ -1,6 +1,10 @@
 .unscroll {
   overflow-y: hidden;
   height: 100vh;
+
+  > div {
+    transition: margin-top 300ms ease-in-out;
+  }
 }
 
 .switcher {
