--- a/components/blocks/ImageBlock.module.scss
+++ b/components/blocks/ImageBlock.module.scss
@@ -1,7 +1,10 @@
+@import 'mixins';
+
 .imageblock {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: row-reverse;
 
   .image, .contents {
     flex: 1;
@@ -22,10 +25,6 @@
     padding: 2em;
     text-align: right;
 
-    &.reverse {
-      text-align: left;
-    }
-
     h2 {
       font-size: 3.5em;
       margin: 0;
@@ -34,6 +33,49 @@
 
     p {
       font-size: 1.5em;
+    }
+  }
+
+  &.reverse {
+    flex-direction: row;
+
+    .contents {
+      text-align: left;
+    }
+  }
+
+  @include break-at-second {
+    flex-direction: column;
+    align-self: center;
+
+    .image, .contents {
+      flex: auto;
+    }
+
+    .image {
+      img {
+        max-height: 40vh;
+      }
+    }
+
+    .contents {
+      text-align: center;
+
+      h2 {
+        font-size: 2em;
+      }
+
+      p {
+        font-size: 1em;
+      }
+    }
+
+    &.reverse {
+      flex-direction: column;
+
+      .contents {
+        text-align: center;
+      }
     }
   }
 }
