--- a/components/projects/ProjectBlock.module.scss
+++ b/components/projects/ProjectBlock.module.scss
@@ -1,11 +1,24 @@
 @import 'colors';
+@import 'globals';
+@import 'mixins';
 
 .project {
-  width: calc(340px - 2em);
+  width: calc(#{$main-width / 3} - 2em);
   box-sizing: border-box;
   background: $background-primary;
 
+  @include break-at-main {
+    width: calc(#{$second-width / 2} - 2em);
+  }
+
+  @include break-at-second {
+    width: auto;
+    margin-bottom: 2em;
+  }
+
   .image {
+    text-align: center;
+
     img {
       max-width: 100%;
     }
