--- a/components/projects/ProjectsList.module.scss
+++ b/components/projects/ProjectsList.module.scss
@@ -1,7 +1,13 @@
+@import 'mixins';
+
 .projects {
   display: flex;
   align-items: flex-start;
   justify-content: center;
   flex-wrap: wrap;
   gap: 2em;
+
+  @include break-at-second {
+    display: block;
+  }
 }
