--- a/components/the-header/TheHeader.module.scss
+++ b/components/the-header/TheHeader.module.scss
@@ -1,4 +1,5 @@
 @import 'colors';
+@import 'mixins';
 
 .siteHeader {
   background: $background-primary;
@@ -19,6 +20,14 @@
       font-size: 1.4em;
       font-weight: 700;
     }
+
+    @include break-at-second {
+      display: inline-block;
+
+      img, span {
+        vertical-align: middle;
+      }
+    }
   }
 
   &.fixed {
@@ -26,5 +35,31 @@
     top: 0;
     left: 0;
     right: 0;
+    z-index: 1000;
+  }
+
+  .mainnav {
+    @include break-at-second {
+      display: none;
+      background: lighten($background-primary, 15%);
+      margin-top: 1em;
+
+      &.opened {
+        display: block;
+      }
+    }
+  }
+
+  .hamburger {
+    display: none;
+    font-size: 1.5em;
+    padding: 0.5em 1em;
+    position: absolute;
+    top: 0;
+    right: 0;
+
+    @include break-at-second {
+      display: block;
+    }
   }
 }
