--- a/styles/base.scss
+++ b/styles/base.scss
@@ -1,5 +1,7 @@
 @import './colors';
 @import './fonts';
+@import './globals';
+@import './mixins';
 
 body {
   margin: 0;
@@ -9,8 +11,17 @@ body {
 }
 
 .mid {
-  width: 1020px;
+  width: $main-width;
   margin: 0 auto;
+
+  @include break-at-main {
+    width: $second-width;
+  }
+
+  @include break-at-second {
+    width: auto;
+    margin: 0 1em;
+  }
 }
 
 a {
@@ -27,6 +38,12 @@ a {
   display: flex;
   align-items: center;
   justify-content: space-between;
+
+  @include break-at-second {
+    &.header-flex {
+      display: block;
+    }
+  }
 }
 
 ::-webkit-scrollbar {
@@ -82,6 +99,11 @@ form {
   .form-error {
     color: $error-red;
     vertical-align: middle;
+
+    @include break-at-second {
+      display: block;
+      margin-top: 1em;
+    }
   }
 }
 
@@ -146,6 +168,16 @@ button {
 
   &.single-button {
     margin-right: 1em;
+
+    @include break-at-second {
+      margin-right: 0;
+    }
+  }
+}
+
+.input-group.buttons {
+  @include break-at-second {
+    text-align: center;
   }
 }
 
