--- a/components/modal/Modal.module.scss
+++ b/components/modal/Modal.module.scss
@@ -2,7 +2,7 @@
 @import 'mixins';
 
 .overlay {
-  background: rgba(255, 255, 255, 0.2);
+  background: rgba(255, 255, 255, 0.4);
   position: fixed;
   top: 0;
   left: 0;
@@ -10,6 +10,8 @@
   bottom: 0;
   z-index: 100;
   cursor: pointer;
+
+  backdrop-filter: blur(5px);
 }
 
 .modal {
