--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -7,3 +7,7 @@ $text-high-contrast: #fff;
 $action-button: #007bff;
 
 $error-red: #f44336;
+
+$gray-gradient-from: #5f5f5f;
+$gray-gradient-to: #aaa;
+$gray-gradient: linear-gradient(90deg, $gray-gradient-from 0%, $gray-gradient-to 100%);
