fix CSS bug in project blocks

--- a/components/projects/ProjectBlock.module.scss
+++ b/components/projects/ProjectBlock.module.scss
@@ -33,6 +33,10 @@
     width: auto;
     margin-bottom: 2em;
     margin-right: 0;
+
+    &:nth-child(3n) {
+      margin-right: 0;
+    }
   }
 
   .image {
