--- a/components/modal/Modal.module.scss
+++ b/components/modal/Modal.module.scss
@@ -50,10 +50,16 @@
 
   .close {
     position: absolute;
-    top: 0;
-    right: 0;
-    padding: 1em;
+    top: 10px;
+    right: 10px;
+    font-size: 1.2em;
+    width: 2.5em;
+    height: 2.5em;
+    line-height: 2.5em;
+    text-align: center;
     cursor: pointer;
+    background: $background-secondary;
+    border-radius: 100%;
 
     &:hover {
       color: darken($text-primary, 20%);
