--- a/components/modal/Modal.module.scss
+++ b/components/modal/Modal.module.scss
@@ -2,7 +2,7 @@
 @import 'mixins';
 
 .overlay {
-  background: rgba(255, 255, 255, 0.4);
+  background: rgba(94, 94, 94, 0.74);
   position: fixed;
   top: 0;
   left: 0;
@@ -12,6 +12,7 @@
   cursor: pointer;
 
   backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
 }
 
 .modal {
@@ -53,8 +54,8 @@
     top: 10px;
     right: 10px;
     font-size: 1.2em;
-    width: 2.5em;
-    height: 2.5em;
+    width: 1.5em;
+    height: 1.5em;
     line-height: 2.5em;
     text-align: center;
     cursor: pointer;
@@ -64,5 +65,9 @@
     &:hover {
       color: darken($text-primary, 20%);
     }
+  }
+
+  .align_fix{
+    vertical-align: 0.300em;
   }
 }
