--- a/styles/base.scss
+++ b/styles/base.scss
@@ -121,7 +121,7 @@ form {
   margin-bottom: 1.5em;
 }
 
-label, input, textarea {
+label, input, textarea, select {
   display: block;
 }
 
@@ -131,7 +131,7 @@ label {
   margin-bottom: 5px;
 }
 
-input, textarea {
+input, textarea, select {
   box-sizing: border-box;
   width: 100%;
   border: 0;
@@ -207,6 +207,34 @@ button {
     font-size: 1.5em;
     vertical-align: middle;
     margin-right: 0.5em;
+  }
+}
+
+.table-container {
+  border: 1px solid $background-secondary;
+
+  .row {
+    border-bottom: 1px solid $background-secondary;
+
+    &:last-child {
+      border-bottom: 0;
+    }
+
+    .column {
+      display: inline-block;
+      padding: 10px;
+      border-right: 1px solid $background-secondary;
+
+      &:last-child {
+        border-right: 0;
+      }
+
+      &.key {
+        width: 150px;
+        font-weight: 700;
+        background: $background-secondary
+      }
+    }
   }
 }
 
